# ownfoil

./: .gitignore  dev.sh  docker-compose.cloudflared.yml  ownfoil  pyproject.toml  start.sh
app/: app.py
app/static/css/: input.css  main.css  output.css
app/static/js/: filters.js  games.js  lib.js
app/templates/: base.html  base_new.html  filters.html  index.html  index_old.html  nav.html  setup.html
scripts/: daisy_install.sh  sync-upstream.sh
tw/: input.css  output.css
