[project]
name = "ownfoil"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "croniter==6.0.0",
    "flask==3.1.3",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "nsz",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "unzip-http==0.7",
    "watchdog==6.0.0",
    "werkzeug==3.1.6",
    "zstandard==0.25.0",
]

[tool.uv.sources]
nsz = { git = "https://github.com/nicoboss/nsz.git", rev = "272c53f50eb67b9adf1f26624dbed85c3b41fa54" }
